# python-playground-sp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  README.md  alembic.ini  check_setup.bat  pyproject.toml  requirements-dev.txt  requirements.txt  seed_database.bat  start_server.bat  start_server.sh
alembic/: env.py
alembic/versions/: 044a35c7bcd7_initial_migration_with_all_models.py
app/: __init__.py  main.py  seed_data.py
app/config/: __init__.py  config.py  database.py
app/models/: __init__.py  category.py  example.py  exercise.py  test_case.py
app/routes/: __init__.py  categories.py  execution.py  exercises.py
app/schemas/: __init__.py  category.py  execution.py  exercise.py  test_case.py
app/services/: __init__.py  category_service.py  executor.py  exercise_service.py
