[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-playground"
version = "1.0.0"
description = "Interactive Python exercise platform with FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Python Playground Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | alembic/versions
  | build
  | dist
)/
'''

# ============================================================================
# RUFF - Fast Python Linter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented out code)
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]

ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this pattern)
    "W191",   # indentation contains tabs
    "PLR0913", # too many arguments to function call
    "PLR2004", # magic value used in comparison
    "PLR0911", # too many return statements
    "ERA001",  # commented-out code (some are intentional)
]

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__.py
"alembic/env.py" = ["E402"]  # Allow imports not at top
"app/models/__init__.py" = ["F401"]  # Allow unused imports for convenience

[tool.ruff.isort]
known-first-party = ["app"]

# ============================================================================
# MYPY - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Gradual typing - start strict, relax where needed
disallow_untyped_calls = false  # Set to true once all dependencies are typed
disallow_any_generics = false   # Set to true once ready

# Ignore missing imports for third-party packages without type stubs
[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "psycopg2.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Markers for different test types
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security tests (critical)",
    "slow: Slow running tests",
]

addopts = [
    "-v",                           # verbose output
    "--strict-markers",             # error on undefined markers
    "--tb=short",                   # shorter traceback format
    "--cov=app",                    # coverage for app directory
    "--cov-report=term-missing",    # show missing lines in terminal
    "--cov-report=html",            # generate HTML coverage report
    "--cov-report=xml",             # generate XML for CI
    "--cov-fail-under=80",          # fail if coverage below 80%
    "-ra",                          # show summary of all test outcomes
]

# Timeout for tests (prevents hanging)
timeout = 300
timeout_method = "thread"

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/alembic/versions/*",
    "app/seed_data.py",  # Seed script doesn't need coverage
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT - Security Linter
# ============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv", "/alembic/versions"]
skips = [
    "B104",  # hardcoded_bind_all_interfaces - needed for development server
    "B404",  # subprocess import - required for code execution sandbox
    "B603",  # subprocess_without_shell_equals_true - this is actually secure
    "B607",  # start_process_with_partial_path - python3 is standard
]
